<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="request"
            type="com.instabug.android_challenge.model.Request" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/send_button"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        android:layout_marginVertical="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_url_field"/>
                <TextView
                    android:id="@+id/response_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="10"
                    android:ellipsize="end"
                    android:text="@{request.url}"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_code_field"/>
                <TextView
                    android:id="@+id/response_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="10"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(request.code)}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_body_field"/>
                <TextView
                    android:id="@+id/response_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:text="@{request.errorBody}"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_body_field"/>
                <TextView
                    android:id="@+id/response_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:text="@{request.responseBody}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_body_field"/>
                <TextView
                    android:id="@+id/request_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:text="@{request.requestBody}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/execution_time_field"/>
                <TextView
                    android:id="@+id/execution_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(request.executionTime)}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_field"/>
                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:ellipsize="end"
                    android:text="@{request.status ? `SUCCESS` : `FAILURE`}"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
